--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mangoes of M & M</title>
+
+    <!-- Open Graph Meta Tags for Facebook -->
+    <meta property="og:title" content="Mangoes of M & M" />
+    <meta property="og:description" content="Delicious, fresh mangoes delivered to your door!" />
+    <meta property="og:image" content="https://th.bing.com/th/id/R.abb3bbe37c6593a9c5313fc98b72f3d2?rik=79C6Ax%2bq2u8qfw&pid=ImgRaw&r=0" />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:type" content="website" />
+
     <style>
         * {
             margin: 0;
@@ -79,6 +87,7 @@
             transform: scale(1.05);
         }
     </style>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
